Adicionei um novo paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quia voluptates a, iure dolores earum. Maiores, officia tempora, consequatur vel facere officiis dicta similique deserunt aspernatur odit nihil aliquam saepe!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem saepe dolore praesentium dicta provident perferendis earum quia commodi nemo deserunt ducimus, accusantium quibusdam tenetur ad non, debitis, ea iusto veniam.</p>
 </body>
 </html>
